# ---------------------------------------------------------------------------------
# 파일명: pyproject.toml
# 이 파일은 Poetry 프로젝트 설정 파일이다.
# - 프로젝트 이름, 버전, 설명
# - 포함할 파이썬 폴더
# - 필요한 외부 패키지 목록
# - 프로젝트 빌드 설정
# 등을 정의한다.
# -----------------------------------------------------------------------------------

[tool.poetry]
name = "todo"                                     # 프로젝트 이름 (폴더명과는 무관함)
version = "0.1.0"                                 # 프로젝트 버전 (업데이트할 떄 변경)
description = ""                                  # 프로젝트에 대한 간단한 설명
authors = ["eunhyeok <eunhyeok071023@gmail.com>"] # 만든 사람람의 이름과 이메일
readme = "README.md"                              # 프로젝트의 소개 문서 파일 이름

# * 파이썬 코드가 들어있는 폴더를 지정
# - 일반적으로 우리가 만든 Python 파일이 모여 있는 폴더명을 적는다
packages = [
    { include = "api" }, # * 'api' 폴더를 프로젝트에 포함
]

# ------------------------------------------------------------------------------
# 이 프로젝트를 실행하기 위해 꼭 필요한 외부 패키지들 (의존성 목록)
# --------------------------------------------------------------------------------
[tool.poetry.dependencies]

python = "^3.12" # * 이 프로젝트는 파이썬 3.12 이상 버전에서 작동하도록 설정정

# * FastAPI는 웹 API를 서버를 만들기 위한 주요 프레임워크
fastapi = "^0.115.12"

# * Uvicorn: FastAPI 앱을 실행하는 웹 서버 도구
# - "standard" 옵션을 통해 자동 재시작, 로깅, 보안 등 추가 기능도 포함됨됨
uvicorn = { extras = ["standard"], version = "^0.34.0" }

# * SQLAlchemy: ORM 도구
# - SQL을 직접 쓰지 않고 파이썬 코드로 테이블을 만들고 데이터를 조작할 수 있음
sqlalchemy = "^2.0.40"

# * asyncpg: PostgresSQL 데이터베이스에 비동기 방식으로 연결할 수 있게 해주는 드라이버
# - FastAPI의 비동기 처리 성능을 활용하기 위해 필요
asyncpg = "^0.30.0"

# * psycopg2-binary: PostgreSQL에 동기 방식으로 연결할 수 있는 드라이버
# - 'migrate_db.py' 같은 초기화 스크립트에서 사용됨
# - asyncpg가 아닌 일반 DB 연결(create_engine) 시 사용
psycopg2-binary = "^2.9.10"

# ---------------------------------------------------------------------
# 프로젝트를 빌드(포장하거나 배포)할 때 사용하는 설정
# - Poetry 내부적으로 사용하는 빌드 도구 지정
# -----------------------------------------------------------------------
[build-system]

# * 빌드를 실행할 때 필요한 도구 이름
requires = ["poetry-core"]                # * 빌드 과정에서 필요한 핵심 도구
build-backend = "poetry.core.masonry.api" # * 실제 빌드를 수행하는 백엔드 도구
